--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="data:," />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VFmaker</title>
+    <meta
+      name="description"
+      content="VFMaker - 可変施肥マップ作成システム。土壌有機物（腐植）含有量に基づいて精密な施肥マップを作成し、農業生産性の向上を支援します。"
+    />
+    <meta name="keywords" content="VFMaker,可変施肥,施肥マップ,精密農業,土壌分析,腐植,農業支援" />
+    <meta property="og:title" content="VFMaker - 可変施肥マップ作成システム" />
+    <meta
+      property="og:description"
+      content="土壌有機物（腐植）含有量に基づいて精密な施肥マップを作成。農業生産性の向上を支援するツールです。"
+    />
+    <meta property="og:type" content="website" />
+    <title>VFMaker - 可変施肥マップ作成システム</title>
   </head>
   <body>
     <div id="app"></div>
