update: meta tag description

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="VFMaker - 可変施肥マップ作成システム。土壌有機物（腐植）含有量に基づいて精密な施肥マップを作成し、農業生産性の向上を支援します。"
+      content="VFMaker - 可変施肥マップ作成システム。土壌状態データ（腐植含有量など）に基づいて精密な施肥マップを作成し、農業生産性の向上を支援します。"
     />
     <meta name="keywords" content="VFMaker,可変施肥,施肥マップ,精密農業,土壌分析,腐植,農業支援" />
     <meta property="og:title" content="VFMaker - 可変施肥マップ作成システム" />
     <meta
       property="og:description"
-      content="土壌有機物（腐植）含有量に基づいて精密な施肥マップを作成。農業生産性の向上を支援するツールです。"
+      content="土壌状態データ（腐植含有量など）に基づいて精密な施肥マップを作成。農業生産性の向上を支援するツールです。"
     />
     <meta property="og:type" content="website" />
     <title>VFMaker - 可変施肥マップ作成システム</title>
